--- a/src/app/pages/exercise-explorer/view-exercise/view-exercise.component.html
+++ b/src/app/pages/exercise-explorer/view-exercise/view-exercise.component.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-item-divider>
+  <ion-item-divider class="ion-no-border">
     <ion-label> {{receivedBodypart.toLocaleUpperCase()}} EXERCISES</ion-label>
   </ion-item-divider>
   <ion-card *ngFor="let ExerciseTuple of ExerciseDetails">
