--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -38,9 +38,9 @@
         </ion-avatar>
         <ion-grid>
           <ion-row>
-            <ion-label class="Bcard2"><b style="font-size: 18px;">&nbsp;{{notice.sendername}}</b></ion-label>
+            <p class="Bcard2"><b style="font-size: 18px;">&nbsp;{{notice.sendername}}</b></p>
           </ion-row>  
-          <ion-label class="Bcard">&nbsp;{{notice.message}}</ion-label>
+          <p class="Bcard">&nbsp;{{notice.message}}</p>
         </ion-grid>
       </div>
       <div class="flex-center4" *ngIf="notice.message == 'Sent you a Friend Request!'">
