--- a/src/app/pages/notifications/notifications.page.scss
+++ b/src/app/pages/notifications/notifications.page.scss
@@ -39,11 +39,11 @@
 }
 .Bcard{
     //background-color:rgb(249, 253, 254);
-    color: #ffffff;
+    // color: #ffffff;
 }
 .Bcard2{
     //background-color:rgb(249, 253, 254);
-    color: #428cff;
+    // color: #428cff;
 }
 
 .ion-icon1{
