--- a/src/app/pages/workout-tracking/workout-tracking.page.scss
+++ b/src/app/pages/workout-tracking/workout-tracking.page.scss
@@ -95,3 +95,8 @@ ion-toolbar ion-item{
   --padding-end: 12px; 
   font-size: 24px; 
 }
+
+.inputField-container {
+  text-align: start;
+  margin-bottom: 10px;
+}
