--- a/src/app/pages/workout-tracking/workout-tracking.page.scss
+++ b/src/app/pages/workout-tracking/workout-tracking.page.scss
@@ -7,7 +7,7 @@ ion-content {
   //background-color: #A8DADC;
   border-radius: 25px;
   padding: 20px;
-  width: 80%;
+  // width: 80%;
   text-align: center;
   margin: auto; 
 }
