--- a/src/app/pages/workout-tracking/workout-tracking.page.scss
+++ b/src/app/pages/workout-tracking/workout-tracking.page.scss
@@ -99,4 +99,7 @@ ion-toolbar ion-item{
 .inputField-container {
   text-align: start;
   margin-bottom: 10px;
+  .input-field {
+    border-radius: 8px;
+  }
 }
