--- a/src/app/pages/groups/groups.page.html
+++ b/src/app/pages/groups/groups.page.html
@@ -21,15 +21,14 @@
     
     <ion-card-content>
      <div class="button-container">
+      <ion-button>
+        <ion-icon name="home-outline" slot="start"></ion-icon>
+        <ion-label>Home</ion-label>
+      </ion-button>
       <ion-button (click)="stageGroup(Group)">
         <ion-icon name="chatbox-outline" slot="start"></ion-icon>
         <ion-label>Chats</ion-label>
      </ion-button>
-
-      <ion-button>
-        <ion-icon name="calendar-outline" slot="start"></ion-icon>
-        <ion-label>View Workout</ion-label>
-      </ion-button>
      </div>
     </ion-card-content>
   </ion-card>
