--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -18,7 +18,7 @@
 <ion-content class="main" >
   <div class="group-options" *ngIf="showOptions">
     <ion-list class="transparent-list">
-      <ion-item class="transparent-item" (click)="clearNotifications()">
+      <ion-item lines="none" class="transparent-item" (click)="clearNotifications()">
         <ion-icon name="trash-outline" slot="start"></ion-icon>
         <ion-label>Clear All</ion-label>
       </ion-item>
