--- a/src/app/pages/messages/create-group/create-group.component.scss
+++ b/src/app/pages/messages/create-group/create-group.component.scss
@@ -1,5 +1,27 @@
-ion-item {
-    ion-label {
-      font-weight: bold;
-    }
+.outer-grid {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.title-container {
+  text-align: center;
+  .title {
+      font-weight: bolder;
+  }
+}
+
+ion-row {
+  margin-top: 20px;
+}
+
+.group-profile-container {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+
+  ion-avatar {
+      height: 200px;
+      width: 200px;
+  }
 }
