--- a/src/app/pages/messages/group-chatroom/group-chatroom.component.html
+++ b/src/app/pages/messages/group-chatroom/group-chatroom.component.html
@@ -29,22 +29,22 @@
   <div class="chat-container">
     <div class="group-options" *ngIf="showOptions">
       <ion-list class="transparent-list">
-        <ion-item class="transparent-item" (click)="exitGroup()" *ngIf="!isOwner()">
+        <ion-item lines="none" class="transparent-item" (click)="exitGroup()" *ngIf="!isOwner()">
           <ion-icon name="exit-outline" slot="start"></ion-icon>
           <ion-label>Exit Group</ion-label>
         </ion-item>
-        <ion-item class="transparent-item" (click)="deleteGroup()" *ngIf="isOwner()">
+        <ion-item lines="none" class="transparent-item" (click)="deleteGroup()" *ngIf="isOwner()">
           <ion-icon name="trash-outline" slot="start"></ion-icon>
           <ion-label>Delete Group</ion-label>
         </ion-item>
-        <ion-item class="transparent-item" (click)="editGroup()" *ngIf="isAdmin()">
+        <!-- <ion-item class="transparent-item" (click)="editGroup()" *ngIf="isAdmin()">
           <ion-icon name="create-outline" slot="start"></ion-icon>
           <ion-label>Edit Group</ion-label>
-        </ion-item>
-        <ion-item class="transparent-item" (click)="reportGroup()">
+        </ion-item> -->
+        <!-- <ion-item class="transparent-item" (click)="reportGroup()">
           <ion-icon name="alert-outline" slot="start"></ion-icon>
           <ion-label>Report</ion-label>
-        </ion-item>
+        </ion-item> -->
       </ion-list>
     </div>
     <div *ngFor="let message of chats">
