--- a/src/app/pages/messages/create-group/create-group.component.html
+++ b/src/app/pages/messages/create-group/create-group.component.html
@@ -38,7 +38,7 @@
         <ion-col size="12" size-md="6">
           <ion-label position="floating">Group Name*</ion-label>
           <ion-item class="input-field" lines="none">
-            <ion-input type="text" [(ngModel)]="group.displayName" placeholder="Enter Group Name"></ion-input>
+            <ion-input type="text" [(ngModel)]="group.displayName" placeholder="Enter group name"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -46,7 +46,7 @@
         <ion-col size="12" size-md="6">
           <ion-label position="floating">Group Description*</ion-label>
           <ion-item class="input-field" lines="none">
-            <ion-textarea rows='4' autoGrow="true" maxlength="300" [(ngModel)]="group.bio" placeholder="Enter group description Name"></ion-textarea>
+            <ion-textarea rows='4' autoGrow="true" maxlength="300" [(ngModel)]="group.bio" placeholder="Enter group description"></ion-textarea>
           </ion-item>
         </ion-col>
       </ion-row>
