--- a/src/app/pages/healthdata/healthdata.page.html
+++ b/src/app/pages/healthdata/healthdata.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <backbutton></backbutton>
      </ion-buttons>
-    <ion-title>Health Data</ion-title>
+    <ion-title>Edit Health Data</ion-title>
   </ion-toolbar>
 </ion-header>
 
