--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -68,7 +68,7 @@
           </ion-card>
         </swiper-slide>
         <swiper-slide>
-          <ion-card routerLink="/healthdata">
+          <ion-card routerLink="/health-data-display">
             <ion-card-content>
               <ion-card-title>
                 <ion-icon name="heart"></ion-icon>
