--- a/src/theme/dark-theme.scss
+++ b/src/theme/dark-theme.scss
@@ -35,6 +35,7 @@ body[color-theme="dark"] {
   --ion-tab-bar-color: #ffffff;
   --ion-item-divider-color: #010a1b;
   --ion-modal-background-color: #001b34;
+  --ion-fab-button-color: #010a1b;
 
   ion-text, p {
     color: #4185ff;
